# synapse-todo-board

./: .gitignore  .mcpbignore  Makefile  README.md  SKILL.md  SPEC.md  context.md  manifest.json  mpak.json  pyproject.toml  server.json
.github/workflows/: release.yml
schemas/: board.schema.json  task.schema.json
seed/: sample-boards.json  sample-tasks.json
skills/task-triage/: SKILL.md
src/synapse_todo_board/: __init__.py  instructions.py  server.py
src/synapse_todo_board/tools/: __init__.py  archive_task.py  batch_archive.py  board_summary.py  create_board_task.py  find_board_task.py  move_task.py  reorder_column.py
tests/: conftest.py  test_custom_instructions.py  test_server.py  test_tools.py  test_ui_contract.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  formStyles.ts  index.tsx  tokens.ts
ui/src/components/: BoardSelector.tsx  Column.tsx  FilterBar.tsx  TaskCard.tsx  TaskDetail.tsx
ui/src/hooks/: useBoards.ts  useTasks.ts
ui/src/views/: BoardView.tsx  TableView.tsx
