[project]
name = "synapse-todo-board"
version = "0.1.0"
description = "Kanban-style task manager with table and drag-and-drop board views"
requires-python = ">=3.13"
dependencies = [
    "upjack[mcp]>=0.2.0",
]

[tool.uv.sources]
upjack = { path = "../../products/upjack/code/lib/python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synapse_todo_board"]
